--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bcinterview",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://yosstos.github.io/bcinterview",
+  "homepage": "https://yosstos.github.io/bcinterview",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
